Fixed spacing in instruction numbering

--- a/src/scss/components/_mixins.scss
+++ b/src/scss/components/_mixins.scss
@@ -308,7 +308,7 @@
                 font-size: rem-calc(24);
                 font-weight: 700;
                 content: counter(item);
-                width: $global-margin * 2;
+                width: 2rem;
                 margin-left: $global-margin/2;
                 flex-shrink: 0;
 
